--- a/projeto.html
+++ b/projeto.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <head></head>
-    <main></main>
-    <footer></footer>
+    <main>
+        <section id="telefone">
+            
+        </section>
+        <section id="rede">
+
+        </section>
+    </main>
 </body>
 </html>
